--- a/rep01.html
+++ b/rep01.html
@@ -39,7 +39,8 @@
 
     <div>
       <h3>1-2 ゲーム</h3>
-      <img src="game.png" alt="ゲーム" width="50%" height="50%">
+      <img src="game1.png" alt="ゲーム" width="50%" height="50%">
+      <img src="game2.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
         ないようないよう<br>
@@ -51,7 +52,7 @@
     <div>
       <h3>1-3 ホームページ作成</h3>
       <div>
-        <!-- 自分のホームページのURLに置き替える↓ -->
+        <!-- ↓ -->
         <a href="https://github_ID.github.io/website/">私のホームページ</a><br>
         1.内容<br>
         ないようないよう<br>
