--- a/rep01.html
+++ b/rep01.html
@@ -52,8 +52,8 @@
     <div>
       <h3>1-3 ホームページ作成</h3>
       <div>
-        <!-- ↓ -->
-        <a href="https://github_ID.github.io/website/">私のホームページ</a><br>
+        <!--自分のホームページURLに置き換える↓ -->
+        <a href="https://.github.io/website/">私のホームページ</a><br>
         1.内容<br>
         ないようないよう<br>
         2.感想<br>
