--- a/rep01.html
+++ b/rep01.html
@@ -53,7 +53,7 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!--自分のホームページURLに置き換える↓ -->
-        <a href="https://.github.io/website/">私のホームページ</a><br>
+        <a href="https://yuudai35.github.io/website/">私のホームページ</a><br>
         1.内容<br>
         ないようないよう<br>
         2.感想<br>
