--- a/rep01.html
+++ b/rep01.html
@@ -31,10 +31,9 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを作成し、そのプログラムを用いて扇子を描いた。
-        上記の通り、「250歩動かす、－250歩動かす、50歩動かす、5度回す、ペンの色を10ずつ変える」を36回繰り返し、カラフルな扇子を描いた。<br>
+        スクラッチを使って線を書くプログラムを作成し、そのプログラムを用いて扇子を描いた。上記の通り、「250歩動かす、－250歩動かす、50歩動かす、5度回す、ペンの色を10ずつ変える」を36回繰り返し、カラフルな扇子を描いた。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        スクラッチは、以前から知っていたが、ゲームを遊ぶだけでプログラムをしたことがなかったので、簡単なものではあるが作成できたので良かったです。スクラッチで他のことにも挑戦してみようと思いました。<br>
       </div>
     </div>
 
