--- a/rep2.html
+++ b/rep2.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>3B班N番 ニックネーム</div>
+    <div>3B班35番 明星雄大</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
