--- a/rep2.html
+++ b/rep2.html
@@ -28,7 +28,7 @@
     <h2>第2週目</h2>
     <div>
       <h3>2-1 １週目のレポートをHTMLで作る</h3>
-      <a href="https://tmhrdoi.github.io/website/rep01.html">１週目のレポート</a><br>
+      <a href="https://yuudai35.github.io/website/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
         ないようないよう<br>
