--- a/rep2.html
+++ b/rep2.html
@@ -28,12 +28,12 @@
     <h2>第2週目</h2>
     <div>
       <h3>2-1 １週目のレポートをHTMLで作る</h3>
-      <a href="https://yuudai35.github.io/website/rep01.html">１週目のレポート</a><br>
+      <a href="https://yuudai35.github.io/website/rep02.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Teachable Machineを使用して、人工知能に「グー」、「チョキ」、「パー」、「なし」を画像データをもとに区別させるようにした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        人工知能<br>
       </div>
     </div>
 
