--- a/rep01.html
+++ b/rep01.html
@@ -55,15 +55,15 @@
         <!--自分のホームページURLに置き換える↓ -->
         <a href="https://yuudai35.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+       　Githubを使って、まず、アカウントを作り、ホームページを作る手順に従って作成し、その後、ホームページのタイトルを変えた。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        ホームページの作り方を知れたので、今後、ホームページを作ることがあるかもしれないから、その時は、同じようにして作ろうと思った。<br>        
       </div>      
     </div>
     
   </div>
   <div class=footer>
-    作成日：2022年MM月DD日
+    作成日：2022年11月02日
   </div>
 </body>
 </html>
