--- a/rep01.html
+++ b/rep01.html
@@ -43,9 +43,9 @@
       <img src="game2.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        スクラッチを使って、猫が上から降ってくるネズミを捕るゲームを作った。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        自分でプログラミングをしてゲームを作ったことがなかったので<br>        
       </div>
     </div>
 
