--- a/rep3.html
+++ b/rep3.html
@@ -28,7 +28,7 @@
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
       <img src=".png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://tmhrdoi.github.io/website/vr.html">伝言板</a><br>                                   
+      <a href="https://tmhrdoi.github.io/website/vr.html">VR空間</a><br>                                   
       <div>
         1.内容<br>
         ないようないよう<br>
