--- a/rep3.html
+++ b/rep3.html
@@ -27,8 +27,8 @@
     <h2>第3週目</h2>
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
-      <img src=".png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://tmhrdoi.github.io/website/vr.html">VR空間</a><br>                                   
+      <img src="VR空間.png" alt="JavaScript" width="50%" height="50%"><br>
+      <a href="https://yuudai35.github.io/website/vr.html">VR空間</a><br>                                   
       <div>
         1.内容<br>
         ないようないよう<br>
@@ -38,8 +38,8 @@
     </div>
     <div>
       <h3>3-1 JavaScript体験：伝言プログラムを作る</h3>
-      <img src="js.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://tmhrdoi.github.io/website/dengon.html">伝言板</a><br>                                   
+      <img src="dengon.png" alt="JavaScript" width="50%" height="50%"><br>
+      <a href="https://yuudai35.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
         ないようないよう<br>
@@ -61,13 +61,13 @@
   <div class=2week>
     <h2>第2週目のレポート</h2>
       <div>
-        <a href="https://yourID.github.io/website/rep02.html">2週目のレポート</a><br>
+        <a href="https://yuudai35.github.io/website/rep02.html">2週目のレポート</a><br>
       </div>
   </div>
   <div class=1week>
     <h2>第1週目のレポート</h2>
       <div>
-        <a href="https://yourID.github.io/website/rep01.html">1週目のレポート</a><br>
+        <a href="https://yuudai35.github.io/website/rep01.html">1週目のレポート</a><br>
       </div>
   </div>
                                                              
