--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,7 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを作成し、そのプログラムを用いて扇子を描いた。上記の通り、「250歩動かす、－250歩動かす、50歩動かす、5度回す、ペンの色を10ずつ変える」を36回繰り返し、カラフルな扇子を描いた。<br>
+        スクラッチを使って線を書くプログラムを作成し、そのプログラムを用いて扇子を描いた。<br>
         2.感想<br>
         スクラッチは、以前から知っていたが、ゲームを遊ぶだけでプログラムをしたことがなかったので、簡単なものではあるが作成できたので良かったです。スクラッチで他のことにも挑戦してみようと思いました。<br>
       </div>
@@ -45,7 +45,7 @@
         1.内容<br>
         スクラッチを使って、猫が上から降ってくるネズミを捕るゲームを作った。<br>
         2.感想<br>
-        自分でプログラミングをしてゲームを作ったことがなかったので<br>        
+        自分でプログラミングをしてゲームを作ったことがなかったので、これからも挑戦してみようと思った。<br>        
       </div>
     </div>
 
@@ -63,7 +63,7 @@
     
   </div>
   <div class=footer>
-    作成日：2022年11月02日
+    作成日：2022年11月03日
   </div>
 </body>
 </html>
