--- a/rep2.html
+++ b/rep2.html
@@ -31,21 +31,21 @@
       <a href="https://yuudai35.github.io/website/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        <br>
+        Githubを使って、１週目のレポートをHTMLで作った。<br>
         2.感想<br>
-        <br>
+        普段、Githubを使うことがないからわからなかったが、教わってから１週目のレポートを完成させたとき、達成感を感じたので、この調子で２週目と３週目も完成させたいと思う。<br>
       </div>
     </div>
 
     <div>
       <h3>2-2 機械学習体験</h3>
-      <img src="ml2.png" alt="ML" width="50%" height="50%">
+      <img src="ml1.png" alt="ML" width="50%" height="50%">
       <img src="ml2.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
         Teachable Machineを使用して、人工知能に「グー」、「チョキ」、「パー」、「なし」を画像データをもとに区別させるようにした。<br>
         2.感想<br>
-        人工知能を使うのは初めてで、<br>        
+        人工知能を使うのは初めてで、自分でプログラムをして自由にできることはとても興味を持てた。<br>        
       </div>
     </div>
     
@@ -61,7 +61,7 @@
     
   </div>
   <div class=footer>
-    作成日：2022年XX月XX日
+    作成日：2022年11月04日
   </div>
 </body>
 </html>
