--- a/rep2.html
+++ b/rep2.html
@@ -53,9 +53,9 @@
       <h3>2-3 VR（バーチャルリアリティー：Virtual Reality）の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRを使ってVR空間での会議室を見て、実際に動いてみた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        VR体験はなかなかできないことで、みんなもはしゃいでいたし、自分の目の前に新たな空間が広がり、とても貴重な体験ができた。<br>
       </div>
     </div>
     
