--- a/rep3.html
+++ b/rep3.html
@@ -31,9 +31,9 @@
       <a href="https://yuudai35.github.io/website/vr.html">VR空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VR空間で、自分のオリジナルの3次元モデルを作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        僕は、モアイ像を意識して3次元モデルを作った。特に鼻の部分をこだわって、微妙な角度や、奥行き、大きさなどを丁寧にしないと思っていたのと違うものになるから気をつけようと思った。<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://yuudai35.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        JavaScriptで、伝言プログラムをし、伝言板を作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        自分で、手順を見ながら作っていって、途中で分からなくなったりしたが、自分で解決したり、友達に聞いたりして、最終的には、伝言板を完成できたので良かったです。<br>
       </div>
     </div>
 
@@ -52,9 +52,9 @@
       <h3>3-2 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRを使って、3次元空間でボールを投げたり、物を運んだりした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        前回の二週目でもVRは使ったが、それとは違い、自分でアクションを起こす体験をし、そがれとても面白かった。<br>
       </div>
     </div>
   
@@ -72,7 +72,7 @@
   </div>
                                                              
   <div class=footer>
-    作成日：2022年MM月DD日
+    作成日：2022年11月19日
   </div>
 </body>
 </html>
